--- a/src/sass/components/_location.scss
+++ b/src/sass/components/_location.scss
@@ -28,7 +28,7 @@
   @include min($tablet) {
     display: inline-block;
     vertical-align: top;
-    width: 33%;
+    width: 33.33%;
   }
 
   &::after {
@@ -65,7 +65,7 @@
   @include min($tablet) {
     display: inline-block;
     vertical-align: top;
-    width: 66.6%;
+    width: 66.66%;
     padding-left: 36px;
   }
 }
@@ -163,6 +163,7 @@
 
 .location-header__utilities {
   margin-top: 1em;
+  font-size: 1.6rem;
 }
 
 .utilities-link {
